--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<html>
+  <head>
+    <title>Home Page</title>
+  </head>
+  <body>
+    <h3>Welcome my resume</h3>
+    <p>My name is linnlinnhtet</>
+  </body>
+</html>
