--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
-  <head>
+
+<head>
     <title>Home Page</title>
-  </head>
-  <body>
-    <h3>Welcome my resume</h3>
-    <p>My name is linnlinnhtet</>
-  </body>
+</head>
+
+<body>
+    <h3>Welcome GIT LESSON</h3>
+    <p>My name is linnlinnhtet
+        </>
+</body>
+
 </html>
